fixed top spacing for both pages

--- a/starter-code/apple-pie-starter-code/css/main.css
+++ b/starter-code/apple-pie-starter-code/css/main.css
@@ -48,10 +48,10 @@ h1 {
   font-weight: normal;
   padding-top: 190px;
   color: white;
+  margin: 0;
 }
 
 h2 {
   font-size: 20px;
   font-weight: normal;
 }
-
