--- a/starter-code/french-onion-soup-starter-code/css/main.css
+++ b/starter-code/french-onion-soup-starter-code/css/main.css
@@ -49,6 +49,7 @@ h1 {
   padding-top: 90px;
   color: white;
   opacity: 0.7;
+  margin: 0;
 }
 
 h2 {
